Add CRUD to sections
